# Flipkart-Product-Recommender

./: Dockerfile  app.py  flask-deployment.yaml  pyproject.toml  test.py
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
notebook/: experiment.ipynb  experiment_history_aware_retriever.ipynb
prometheus/: prometheus-configmap.yaml  prometheus-deployment.yaml
